--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,237 @@
-// For information on how to create your own theme, please see:
-// http://ionicframework.com/docs/theming/
+:root {
+
+  --swiper-theme-color: #A8D5BA; /* Primary theme color */
+  --swiper-navigation-size: 44px; /* Navigation button size */
+  --swiper-pagination-color: #A8D5BA; /* Pagination color */
+  --swiper-pagination-bullet-inactive-color: #C4C4C4; /* Inactive pagination bullet color */
+  --swiper-pagination-bullet-active-color: #FFB997; /* Active pagination bullet color */
+  
+  /** Primary Colors **/
+  --ion-color-primary: #A8D5BA;
+  --ion-color-primary-rgb: 168, 213, 186;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #97C5A8;
+  --ion-color-primary-tint: #B9E6C8;
+
+  /** Secondary Colors **/
+  --ion-color-secondary: #FFB997;
+  --ion-color-secondary-rgb: 255, 185, 151;
+  --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast-rgb: 255, 255, 255;
+  --ion-color-secondary-shade: #E0A688;
+  --ion-color-secondary-tint: #FFC7A6;
+
+  /** Tertiary Colors **/
+  --ion-color-tertiary: #D4A5A5;
+  --ion-color-tertiary-rgb: 212, 165, 165;
+  --ion-color-tertiary-contrast: #ffffff;
+  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
+  --ion-color-tertiary-shade: #C49595;
+  --ion-color-tertiary-tint: #E5B5B5;
+
+  /** Success Colors **/
+  --ion-color-success: #AED9E0;
+  --ion-color-success-rgb: 174, 217, 224;
+  --ion-color-success-contrast: #ffffff;
+  --ion-color-success-contrast-rgb: 255, 255, 255;
+  --ion-color-success-shade: #9DCDD3;
+  --ion-color-success-tint: #BFE3EB;
+
+  /** Warning Colors **/
+  --ion-color-warning: #FFE6A7;
+  --ion-color-warning-rgb: 255, 230, 167;
+  --ion-color-warning-contrast: #000000;
+  --ion-color-warning-contrast-rgb: 0, 0, 0;
+  --ion-color-warning-shade: #E0C597;
+  --ion-color-warning-tint: #FFEFBA;
+
+  /** Danger Colors **/
+  --ion-color-danger: #E6A8A8;
+  --ion-color-danger-rgb: 230, 168, 168;
+  --ion-color-danger-contrast: #ffffff;
+  --ion-color-danger-contrast-rgb: 255, 255, 255;
+  --ion-color-danger-shade: #D08D8D;
+  --ion-color-danger-tint: #EFB9B9;
+
+  /** Dark Colors **/
+  --ion-color-dark: #424242;
+  --ion-color-dark-rgb: 66, 66, 66;
+  --ion-color-dark-contrast: #ffffff;
+  --ion-color-dark-contrast-rgb: 255, 255, 255;
+  --ion-color-dark-shade: #3B3B3B;
+  --ion-color-dark-tint: #4A4A4A;
+
+  /** Medium Colors **/
+  --ion-color-medium: #C4C4C4;
+  --ion-color-medium-rgb: 196, 196, 196;
+  --ion-color-medium-contrast: #ffffff;
+  --ion-color-medium-contrast-rgb: 255, 255, 255;
+  --ion-color-medium-shade: #B3B3B3;
+  --ion-color-medium-tint: #D5D5D5;
+
+  /** Light Colors **/
+  --ion-color-light: #F8F9FA;
+  --ion-color-light-rgb: 248, 249, 250;
+  --ion-color-light-contrast: #000000;
+  --ion-color-light-contrast-rgb: 0, 0, 0;
+  --ion-color-light-shade: #E9EAEF;
+  --ion-color-light-tint: #FAFAFB;  
+
+  /** Background Colors **/
+  --ion-background-color: #FAF3DD; /* Light pastel background */
+  --ion-background-color-rgb: 250, 243, 221;
+  --ion-text-color: #4A4A4A; /* Dark gray text for contrast */
+  --ion-text-color-rgb: 74, 74, 74;
+}
+
+/** Dark Theme **/
+body.dark {
+
+  --ion-color-primary: #97C5A8;
+  --ion-color-primary-rgb: 151, 197, 168;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #85B294;
+  --ion-color-primary-tint: #A8D5BA;
+
+  --ion-color-secondary: #FFC7A6;
+  --ion-color-secondary-rgb: 255,199,166;
+  --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast-rgb: 255,255,255;
+  --ion-color-secondary-shade: #E0A688;
+  --ion-color-secondary-tint: #FFD6B6;
+
+  --ion-color-tertiary: #C49595;
+  --ion-color-tertiary-rgb: 196,149,149;
+  --ion-color-tertiary-contrast: #ffffff;
+  --ion-color-tertiary-contrast-rgb: 255,255,255;
+  --ion-color-tertiary-shade: #B38585;
+  --ion-color-tertiary-tint: #D4A5A5;
+
+  --ion-color-success: #9DCDD3;
+  --ion-color-success-rgb: 157,205,211;
+  --ion-color-success-contrast: #000000;
+  --ion-color-success-contrast-rgb: 0,0,0;
+  --ion-color-success-shade: #8CC0C5;
+  --ion-color-success-tint: #AED9E0;
+
+  --ion-color-warning: #E0C597;
+  --ion-color-warning-rgb: 224,197,151;
+  --ion-color-warning-contrast: #000000;
+  --ion-color-warning-contrast-rgb: 0,0,0;
+  --ion-color-warning-shade: #CBB08B;
+  --ion-color-warning-tint: #E6D3AA;
+
+  --ion-color-danger: #D08D8D;
+  --ion-color-danger-rgb: 208,141,141;
+  --ion-color-danger-contrast: #ffffff;
+  --ion-color-danger-contrast-rgb: 255,255,255;
+  --ion-color-danger-shade: #BD7A7A;
+  --ion-color-danger-tint: #E6A8A8;
+
+  --ion-color-dark: #E9EAEF;
+  --ion-color-dark-rgb: 233,234,239;
+  --ion-color-dark-contrast: #000000;
+  --ion-color-dark-contrast-rgb: 0,0,0;
+  --ion-color-dark-shade: #D0D1D5;
+  --ion-color-dark-tint: #F0F1F3;
+
+  --ion-color-medium: #B3B3B3;
+  --ion-color-medium-rgb: 179,179,179;
+  --ion-color-medium-contrast: #000000;
+  --ion-color-medium-contrast-rgb: 0,0,0;
+  --ion-color-medium-shade: #9F9F9F;
+  --ion-color-medium-tint: #C4C4C4;
+
+  --ion-color-light: #222428;
+  --ion-color-light-rgb: 34,36,40;
+  --ion-color-light-contrast: #ffffff;
+  --ion-color-light-contrast-rgb: 255,255,255;
+  --ion-color-light-shade: #1e2023;
+  --ion-color-light-tint: #383a3e;
+
+  /** Background Colors **/
+  --ion-background-color: #2E2E2E; /* Dark pastel background */
+  --ion-background-color-rgb: 46, 46, 46;
+  --ion-text-color: #E0E0E0; /* Light gray text for contrast */
+  --ion-text-color-rgb: 224, 224, 224;
+}
+
+/** iOS Dark Theme **/
+.ios body.dark {
+  --ion-background-color: #4a4a4a; /* Dark pastel background */
+  --ion-background-color-rgb: 46, 46, 46;
+
+  --ion-text-color: #E0E0E0; /* Light gray text for contrast */
+  --ion-text-color-rgb: 224, 224, 224;
+
+  --ion-color-step-50: #1d1d1d;
+  --ion-color-step-100: #292929;
+  --ion-color-step-150: #353535;
+  --ion-color-step-200: #414141;
+  --ion-color-step-250: #4d4d4d;
+  --ion-color-step-300: #595959;
+  --ion-color-step-350: #656565;
+  --ion-color-step-400: #717171;
+  --ion-color-step-450: #7d7d7d;
+  --ion-color-step-500: #898989;
+  --ion-color-step-550: #949494;
+  --ion-color-step-600: #a0a0a0;
+  --ion-color-step-650: #acacac;
+  --ion-color-step-700: #b8b8b8;
+  --ion-color-step-750: #c4c4c4;
+  --ion-color-step-800: #d0d0d0;
+  --ion-color-step-850: #dbdbdb;
+  --ion-color-step-900: #e7e7e7;
+  --ion-color-step-950: #f3f3f3;
+
+  --ion-item-background: #292929;
+
+  --ion-card-background: #353535;
+}
+
+.ios ion-modal.dark {
+  --ion-background-color: var(--ion-color-step-100);
+  --ion-toolbar-background: var(--ion-color-step-150);
+  --ion-toolbar-border-color: var(--ion-color-step-250);
+}
+
+/** Material Design Dark Theme **/
+.md body.dark {
+  --ion-background-color: #2E2E2E; /* Dark pastel background */
+  --ion-background-color-rgb: 46, 46, 46;
+
+  --ion-text-color: #E0E0E0; /* Light gray text for contrast */
+  --ion-text-color-rgb: 224, 224, 224;
+
+  --ion-border-color: #222222;
+
+  --ion-color-step-50: #1e1e1e;
+  --ion-color-step-100: #2a2a2a;
+  --ion-color-step-150: #363636;
+  --ion-color-step-200: #414141;
+  --ion-color-step-250: #4d4d4d;
+  --ion-color-step-300: #595959;
+  --ion-color-step-350: #656565;
+  --ion-color-step-400: #717171;
+  --ion-color-step-450: #7d7d7d;
+  --ion-color-step-500: #898989;
+  --ion-color-step-550: #949494;
+  --ion-color-step-600: #a0a0a0;
+  --ion-color-step-650: #acacac;
+  --ion-color-step-700: #b8b8b8;
+  --ion-color-step-750: #c4c4c4;
+  --ion-color-step-800: #d0d0d0;
+  --ion-color-step-850: #dbdbdb;
+  --ion-color-step-900: #e7e7e7;
+  --ion-color-step-950: #f3f3f3;
+
+  --ion-item-background: #1e1e1e;
+
+  --ion-toolbar-background: #1f1f1f;
+
+  --ion-tab-bar-background: #1a1a1a;
+
+  --ion-card-background: #1a1a1a;
+}
